# drapp-native

./: .gitignore  CMakeLists.txt  library.h
src/math/: drapp_math.cpp  drapp_math.h  drapp_math_wrapper.cpp  drapp_math_wrapper.h
src/sequencer/: doubly-linked-item.cpp  doubly-linked-item.h  doubly-linked-list.cpp  doubly-linked-list.h  player.cpp  player.h  sequencer.cpp  sequencer.h  sound-set.cpp  sound-set.h  track.cpp  track.h  util.cpp  util.h
src/sound/: sound-generator-wrapper.cpp  sound-generator-wrapper.h  sound-generator.cpp  sound-generator.h  sound-mixer-wrapper.cpp  sound-mixer-wrapper.h  sound-mixer.cpp  sound-mixer.h  sound-provider-wrapper.cpp  sound-provider-wrapper.h  sound-provider.cpp  sound-provider.h  sound-wave.cpp  sound-wave.h
src/time/: metronome.cpp  metronome.h  metronome_wrapper.cpp  metronome_wrapper.h
test/exec/: sequencer-launcher.cpp
